# tiff-predictor-2-python

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  embed_signature.py  pyproject.toml  signature.json
.github/workflows/: ci.yml  release.yml
src/: app.py  tiff_predictor_2.py
tests/: test_tiff_predictor_2.py
wit/: codec.wit  world.wit
