[project]
name = "tiff-predictor-2-python"
description = "TIFF Predictor=2 codec in Python, compiled to WebAssembly via componentize-py"
readme = "README.md"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []

[tool.ruff.lint.isort]
known-third-party = ["componentize_py_types"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
ignore = [
    "COM812",  # conflicts with ruff formatter
]
select = [
    'B',
    'BLE',
    'C4',
    'C90',
    'COM',
    'DTZ',
    'E',
    'ERA',
    'F',
    'FA',
    'G',
    'I',
    'INP',
    'N',
    'NPY',
    'PT',
    'PTH',
    'RET',
    'RUF',
    'S',
    'SIM',
    'T20',
    'UP',
    'W',
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S101"]  # no __init__.py needed; assert is fine in tests
"embed_signature.py" = ["INP001", "T20"]  # standalone CLI script; print is the interface

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true
scripts_are_modules = true

[dependency-groups]
dev = [
    "componentize-py>=0.21",
    "mypy>=1.0",
    "pre-commit>=4.0",
    "pre-commit-hooks>=6.0",
    "pytest>=9.0",
    "ruff>=0.15",
]
